// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the feedback popup if feedback is not required 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`feedback actions on no click asks for the reason 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer reasonsPopupSpacing"
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
    <div
      class="popupWrapper"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="container"
      >
        <h3
          class="title"
        >
          Please tell us why.
        </h3>
        <div
          class="reasonButtons"
        >
          <button
            class="
      button
      relatedBtn
    "
          >
            It's related, but it didn't answer my question
          </button>
          <button
            class="
      button
      unrelatedBtn
    "
          >
            It's not related to my question
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feedback actions on yes click hides the feedback popup 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`passing of scroll container classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content this is a class scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected mobile classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer mobile"
      data-testid="scrollcontainer"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title titleMobile"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer  contentMobile"
      >
        <div>
          <div
            class="content contentMobile"
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external mobile"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected title 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Support
        </h1>
      </header>
      <div
        class="content  scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`renders the feedback popup after a certain time has passed 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer optionsPopupSpacing"
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            />
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            />
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
    <div
      class="popupWrapper"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="container"
      >
        <h3
          class="title"
        >
          Does this article answer your question?
        </h3>
        <div
          class="container buttonRight optionButtons"
        >
          <button
            class="
      button
      
    "
          >
            Yes
          </button>
          <button
            class="
      button
      noBtn
    "
          >
            No, I need help
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the help center article 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content  scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            >
              title
            </h2>
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                href="https://example.com"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              role="presentation"
            >
              <p>
                body
              </p>
            </div>
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;
